# fastapi-react-template

./: README.md  docker-compose.yaml
.devcontainer/: devcontainer.json
backend/: Dockerfile  app.py  pyproject.toml
backend/src/: __init__.py
backend/src/logging/: logger.py
backend/src/routers/: items.py
frontend/: Dockerfile
